# nix-templates

./: README.md  flake.nix
clang/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  default.nix  justfile  shell.nix
clang/npins/: sources.json
cpp/: README.md  default.nix  shell.nix
cpp/npins/: sources.json
docker/: README.md  default.nix  docker.nix  justfile
docker/npins/: sources.json
gpu/: README.md  default.nix  shell.nix
gpu/npins/: sources.json
python/: README.md  default.nix  shell.nix
python/npins/: sources.json
